# CrowyCore

./: CMakeLists.txt  LICENSE  README.md
include/: assert.hpp  concepts.hpp  core_types.hpp  dynamic_vector.hpp  enum_traits.hpp  error.hpp  generic_handle.hpp  gjk.hpp  math.hpp  path_util.hpp  ptr_util.hpp  ray.hpp  root_finding.h  semantics.hpp  simple_collision.hpp  slot_map.hpp  string.hpp  type_traits.hpp
src/: assert.cpp  gjk.cpp  path_util.cpp  string.cpp
test/: CMakeLists.txt  dynamic_vector.cpp  gjk2d_test.cpp  gjk3d_test.cpp  math_test.cpp  obb_test.cpp  root_finding_test.cpp  root_finding_visualize.c  slot_map_test.cpp
